--- a/styles/style.scss
+++ b/styles/style.scss
@@ -57,6 +57,16 @@
   gap: 1rem;
 }
 
+.section-heading {
+  font-size: clamp(var(--fs-500), 10vw, var(--fs-800));
+  font-weight: var(--fw-700);
+}
+
+.local-heading {
+  font-size: clamp(var(--fs-400), 6vw, var(--fs-700));;
+  font-weight: var(--fw-700);
+}
+
 @media (max-width: 370px) {
   .flex-justify-between {
     flex-direction: column;
@@ -101,7 +111,7 @@ body {
   grid-template-areas:
     "overlay"
     "overlay";
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .nav {
@@ -250,7 +260,7 @@ body {
 .experience {
   --gap: 2rem;
   display: grid;
-  gap: calc(var(--gap) * 2);
+  gap: clamp(var(--gap), 5vw, calc(var(--gap) * 2));
 
   &__heading {
     font-size: clamp(var(--fs-500), 10vw, var(--fs-800));
@@ -281,6 +291,52 @@ body {
   &__role {
     font-size: var(--fs-700);
     font-weight: var(--fw-700);
+  }
+}
+
+/* -------------------------------- */
+/* experience                       */
+/* -------------------------------- */
+
+.job {
+  &__titling {
+    margin-bottom: 2rem;
+  }
+
+  &__title {
+    font-size: clamp(var(--fs-400), 5vw, var(--fs-600));
+    font-weight: var(--fw-700);
+  }
+
+  &__description {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
+
+.responsibilities__list,
+.achievements__list {
+  display: grid;
+  gap: .5rem;
+
+  list-style: none;
+  max-width: 50ch;
+}
+
+.achievements__item,
+.responsibilities__item {
+  font-size: var(--fs-300);
+}
+
+@media (max-width: 900px) {
+  .job {
+    &__description {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-flow: row;
+      gap: 1rem;
+    }
   }
 }
 
@@ -327,13 +383,13 @@ body {
   &__container {
     display: grid;
     gap: 5rem;
-    grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .projects__container {
-    grid-template-rows: min-content min-content 1fr;
+    grid-auto-rows: min-content;
   }
 }
 
@@ -417,7 +473,7 @@ body {
   }
 }
 
-@media (max-width: 40em) {
+@media (max-width: 60em) {
   .project {
     grid-template-columns: 1fr;
     grid-template-rows: 0.5fr, 1fr;
@@ -500,7 +556,7 @@ body {
 }
 
 /* -------------------------------- */
-/* about, techs, stats section      */
+/* about, techs section      */
 /* -------------------------------- */
 
 .about {
@@ -513,7 +569,7 @@ body {
   }
 
   &__description {
-    max-width: 50ch;
+    max-width: 70ch;
     font-size: clamp(var(--fs-300), 3vw, var(--fs-400));
   }
 }
@@ -525,37 +581,6 @@ body {
   &__title {
     font-size: clamp(var(--fs-400), 5vw, var(--fs-600));
     font-weight: var(--fw-700);
-  }
-}
-
-.stats {
-  display: grid;
-  gap: 1rem;
-
-  &__title {
-    font-size: clamp(var(--fs-400), 5vw, var(--fs-600));
-    font-weight: var(--fw-700);
-  }
-
-  &__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
-
-  .numbers {
-    display: grid;
-    gap: 0.5rem;
-
-    &__heading {
-      font-size: clamp(var(--fs-500), 10vw, var(--fs-700));
-      font-weight: var(--fw-700);
-    }
-  }
-
-  .numbers p:last-child {
-    font-size: clamp(var(--fs-300), 3vw, var(--fs-400));
-    max-width: 15ch;
   }
 }
 
