--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,6 +35,8 @@
 
   --clr-1: #fc00ff;
   --clr-2: #00dbde;
+
+  --adaptive-height: 100svh;
 }
 
 ::selection {
@@ -63,7 +65,7 @@
 }
 
 .local-heading {
-  font-size: clamp(var(--fs-400), 6vw, var(--fs-700));;
+  font-size: clamp(var(--fs-400), 6vw, var(--fs-700));
   font-weight: var(--fw-700);
 }
 
@@ -111,7 +113,7 @@ body {
   grid-template-areas:
     "overlay"
     "overlay";
-  min-height: 100dvh;
+  min-height: var(--adaptive-height);
 }
 
 .nav {
@@ -200,7 +202,7 @@ body {
   z-index: var(--z-200);
 
   &__heading {
-    font-size: clamp(var(--fs-600), 6vw, var(--fs-800));
+    font-size: clamp(var(--fs-400), 6vw, var(--fs-800));
     font-weight: var(--fw-900);
     max-width: 30ch;
     margin-inline: auto;
@@ -213,11 +215,11 @@ body {
 
   &__cta {
     text-align: center;
-    font-size: clamp(var(--fs-400), 3vw, var(--fs-600));
+    font-size: clamp(var(--fs-300), 3vw, var(--fs-600));
   }
 
   &__paragraph {
-    font-size: clamp(var(--fs-400), 3vw, var(--fs-600));
+    font-size: clamp(var(--fs-300), 3vw, var(--fs-600));
     text-align: center;
   }
 }
@@ -251,17 +253,33 @@ body {
 
 .main {
   display: grid;
-  gap: clamp(4rem, 10vw, 10rem);
   position: relative;
   z-index: var(--z-200);
 }
 
+@media (max-width: 900px) {
+  .main {
+    gap: 4rem;
+  }
+}
+
 .experience {
+  display: grid;
+  place-content: center;
+}
+
+@media (min-width: 900px) {
+  .experience {
+    height: var(--adaptive-height);
+  }
+}
+
+.experience-wrapper {
   --gap: 2rem;
   display: grid;
   gap: clamp(var(--gap), 5vw, calc(var(--gap) * 2));
 
-  &__heading {
+  .experience__heading {
     font-size: clamp(var(--fs-500), 10vw, var(--fs-800));
     font-weight: var(--fw-700);
     background: linear-gradient(
@@ -317,7 +335,7 @@ body {
 .responsibilities__list,
 .achievements__list {
   display: grid;
-  gap: .5rem;
+  gap: 0.5rem;
 
   list-style: none;
   max-width: 50ch;
@@ -475,7 +493,20 @@ body {
 @media (max-width: 60em) {
   .project {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr, 1fr;
+    grid-template-rows: 400px 1fr;
+
+    &__cover {
+      max-height: 400px;
+    }
+
+    &__cover--fullstack {
+      object-fit: cover;
+      object-position: top left;
+    }
+  }
+
+  .project--fullstack {
+    grid-template-rows: 280px 1fr;
   }
 }
 
@@ -561,6 +592,7 @@ body {
 .about {
   display: grid;
   place-content: center;
+  text-wrap: balance;
 }
 
 .about-wrapper {
@@ -580,7 +612,7 @@ body {
 
 @media (min-width: 900px) {
   .about {
-    height: 100dvh;
+    height: var(--adaptive-height);
   }
 }
 
@@ -606,10 +638,6 @@ body {
 }
 
 @media (max-width: 27.5rem) {
-  .about {
-    text-align: center;
-  }
-
   .stats__wrapper {
     justify-content: center;
   }
@@ -724,7 +752,9 @@ body {
     transition: all 200ms ease-in;
     font-size: clamp(var(--fs-300), 3vw, var(--fs-400));
 
-    &:hover {
+    &:hover,
+    &:focus,
+    &:focus-visible {
       background-color: var(--clr-1);
       border: 1px solid var(--clr-1);
       color: hsl(var(--clr-primary));
