--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -13,8 +13,8 @@
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -24,7 +24,8 @@ html:focus-within {
 }
 
 /* Set core body defaults */
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -61,9 +62,9 @@ svg {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
